--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e3f2fd"
+    android:background="@drawable/background"
     tools:context=".presentation.main.Splash">
 
 
         <ImageView
             android:id="@+id/splashImage"
-            android:layout_width="413dp"
-            android:layout_height="729dp"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_centerInParent="true"
-            android:src="@drawable/splash"
+            android:src="@drawable/background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -22,6 +22,5 @@
             app:layout_constraintTop_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.277" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
