--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0277bd</color>
-    <color name="colorPrimaryDark">#004c8c</color>
-    <color name="colorAccent">#58a5f0</color>
+    <color name="colorMed">#0277bd</color>
+    <color name="colorDark">#004c8c</color>
+    <color name="coloLight">#58a5f0</color>
+
+    <color name="colorPrimary">#000</color>
+    <color name="colorPrimaryDark">#000</color>
+    <color name="colorAccent">#96979b</color>
+
+    <color name="color_background">#000</color>
+    <color name="color_desire_front">#96979b</color>
+    <color name="color_desire_font">#96979b</color>
 </resources>
