--- a/app/src/main/res/layout/account_creation.xml
+++ b/app/src/main/res/layout/account_creation.xml
@@ -22,6 +22,7 @@
         app:startIconDrawable="@drawable/ic_account_box_black_18dp">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/name_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -42,6 +43,7 @@
         tools:layout_editor_absoluteX="10dp">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/surname_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -60,6 +62,7 @@
         app:startIconDrawable="@drawable/ic_email_black_18dp">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/email_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -79,6 +82,7 @@
         app:startIconDrawable="@drawable/ic_vpn_key_black_18dp">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/password_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword" />
