--- a/app/src/main/res/layout/account_creation.xml
+++ b/app/src/main/res/layout/account_creation.xml
@@ -5,7 +5,42 @@
     android:id="@+id/createAccount"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     tools:context=".presentation.main.AccountCreation">
+
+    <ImageView
+        android:id="@+id/backButton2"
+        android:layout_width="63dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="335dp"
+        android:src="@drawable/ic_back"
+        android:text="@string/back_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/titleCreateAccount"
+        android:layout_width="293dp"
+        android:layout_height="88dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="68dp"
+        android:text="@string/Create_your_account"
+        android:textColor="@color/colorPrimary"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/backButton2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/name"
@@ -15,6 +50,8 @@
         android:layout_marginTop="33dp"
         android:layout_marginRight="13dp"
         android:hint="@string/Name"
+        app:hintTextColor="@color/colorPrimary"
+        app:placeholderTextColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="@id/surname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -94,12 +131,15 @@
         android:layout_width="361dp"
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
-        android:text="SIGN UP"
+        android:text="@string/sign_up"
+        android:textStyle="bold"
+        app:backgroundTint="@color/colorPrimary2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
