--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -7,20 +7,47 @@
     android:background="@drawable/background"
     tools:context=".presentation.main.Splash">
 
+        <TextView
+            android:id="@+id/title1"
+            android:layout_width="336dp"
+            android:layout_height="98dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="104dp"
+            android:layout_marginEnd="28dp"
+            android:text="@string/Crypto"
+            android:textAlignment="center"
+            android:textColor="@color/ic_launcher_background"
+            android:textSize="70sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/title2"
+            android:layout_width="262dp"
+            android:layout_height="104dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="544dp"
+            android:layout_marginEnd="72dp"
+            android:text="@string/Hub"
+            android:textAlignment="center"
+            android:textColor="@color/ic_launcher_background"
+            android:textSize="70sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/splashImage"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="230dp"
+            android:layout_height="221dp"
             android:layout_centerInParent="true"
-            android:src="@drawable/background"
+            android:src="@drawable/logosplash"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.277" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
