--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
     android:background="@color/colorPrimaryDark"
-    tools:context=".presentation.main.MainActivity">
+    android:padding="10dp"
+    tools:context=".presentation.login.MainActivity">
 
     <TextView
         android:id="@+id/titleLogin"
@@ -44,21 +44,20 @@
         android:id="@+id/login_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Login"
         android:layout_marginLeft="13dp"
         android:layout_marginRight="13dp"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:hint="Login"
+        app:layout_constraintBottom_toTopOf="@+id/password_input_layout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/password_input_layout">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            />
+            android:inputType="textEmailAddress" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -66,21 +65,20 @@
         android:id="@+id/password_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="13dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="13dp"
-        app:layout_constraintTop_toBottomOf="@+id/login_input_layout"
-        app:layout_constraintStart_toStartOf="parent"
+        android:hint="Password"
+        app:layout_constraintBottom_toTopOf="@+id/login_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/login_button">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_input_layout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            />
+            android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -90,29 +88,27 @@
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:backgroundTint="@color/colorPrimary2"
+        android:text="Login"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/create_account_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password_input_layout"
-        android:text="Login"
-        />
+        app:layout_constraintTop_toBottomOf="@id/password_input_layout" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/create_account_button"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="361dp"
         android:layout_height="60dp"
-        android:textStyle="bold"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
-        app:backgroundTint="@color/colorPrimary"
-        android:textColor="#FFFFFF"
         android:layout_marginTop="10dp"
+        android:text="Create Account"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/login_button"
-        android:text="Create Account"
-        />
+        app:layout_constraintTop_toBottomOf="@id/login_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
