--- a/app/src/main/res/layout/a_symbol.xml
+++ b/app/src/main/res/layout/a_symbol.xml
@@ -2,10 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
+    android:padding="6dip"
     android:background="?attr/selectableItemBackground"
-    android:minHeight="?attr/minTouchTargetSize"
-    android:padding="6dip">
-
+    android:minHeight="?attr/minTouchTargetSize">
     <TextView
         android:id="@+id/symbol"
         android:layout_width="fill_parent"
@@ -16,14 +15,15 @@
         android:ellipsize="marquee"
         android:singleLine="true"
         android:text="Symbol"
+        android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        android:textSize="12sp"
-        android:textStyle="bold" />
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:layout_alignWithParentIfMissing="true"
         android:layout_above="@id/name"
         android:layout_alignParentTop="true"
@@ -32,8 +32,7 @@
         android:gravity="center_vertical"
         android:text="Name"
         android:textColor="@color/colorPrimary2"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textSize="16sp" />
 
     <ImageView
         android:id="@+id/image"
